[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3", "kaitaiStructCompile[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "SurvivalDatasets"
authors = [{name = "KOLANICH"}]
description = "a unified interface for survival datasets"
readme = "ReadMe.md"
keywords = ["survival analysis"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
	"lazily", # @ git+https://codeberg.org/KOLANICH-libs/lazily.py.git
	"numpy",
	"pandas",
	"lifelines", # @ git+https://github.com/CamDavidsonPilon/lifelines.git
	"scikit-learn",
	"requests", # @ git+https://github.com/psf/requests.git
	"Cache", # @ git+https://github.com/KOLANICH-libs/Cache.py.git
	"liac-arff", # @ git+https://github.com/renatopp/liac-arff.git#egg=arff
	"roman",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-ML/SurvivalDatasets"

[tool.setuptools]
include-package-data = true
zip-safe = true
packages = ["SurvivalDatasets"]

[tool.setuptools_scm]
